--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2096,6 +2096,79 @@ var swapPairs = function(head) {
 
 
 
+----
+
+## 25. K 个一组翻转链表
+
+给你链表的头节点 head ，每 k 个节点一组进行翻转，请你返回修改后的链表。
+
+k 是一个正整数，它的值小于或等于链表的长度。如果节点总数不是 k 的整数倍，那么请将最后剩余的节点保持原有顺序。
+
+你不能只是单纯的改变节点内部的值，而是需要实际进行节点交换。
+
+来源：力扣（LeetCode）
+链接：https://leetcode.cn/problems/reverse-nodes-in-k-group
+著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number} k
+ * @return {ListNode}
+ */
+var reverseKGroup = function(head, k) {
+    const dummyHead = new ListNode(-1);  // 哑结点
+    dummyHead.next = head;
+
+    let pre = dummyHead;
+
+    while (head) {
+        let tail = pre;
+        // 查看剩余部分长度是否大于等于 k
+        for (let i = 0; i < k; i++) {
+            tail = tail.next;
+            if (!tail) {
+                return dummyHead.next;
+            }
+        }
+        const next = tail.next;
+        [head, tail] = myReverse(head, tail);
+        
+        // 把子链表重新接回原链表
+        pre.next = head;
+        tail.next = next;
+        pre = tail;
+        head = tail.next;
+    }
+    return dummyHead.next;
+};
+
+const myReverse = (head, tail) => {
+    let prev = tail.next;
+    let p = head;
+    while (prev !== tail) {
+        const next = p.next;
+        p.next = prev;
+        prev = p;
+        p = next;
+    }
+    return [tail, head];
+}
+
+module.exports = {
+    reverseKGroup : reverseKGroup
+};
+```
+
+
+
 
 ---
 ## 26.删除有序数组中的重复项
