--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -295,3 +295,443 @@ module.exports = {
 
 ## **BM3** **链表中的节点每k个一组翻转**
 
+给你链表的头节点 head ，每 k 个节点一组进行翻转，请你返回修改后的链表。
+
+k 是一个正整数，它的值小于或等于链表的长度。如果节点总数不是 k 的整数倍，那么请将最后剩余的节点保持原有顺序。
+
+你不能只是单纯的改变节点内部的值，而是需要实际进行节点交换。
+
+**提示：**
+
+- 链表中的节点数目为 `n`
+- `1 <= k <= n <= 5000`
+- `0 <= Node.val <= 1000`
+
+
+
+我们需要把链表节点按照 k 个一组分组，所以可以使用一个指针 head 依次指向每组的头节点。这个指针每次向前移动 k 步，直至链表结尾。对于每个分组，我们先判断它的长度是否大于等于 k。若是，我们就翻转这部分链表，否则不需要翻转。
+
+接下来的问题就是如何翻转一个分组内的子链表。翻转一个链表并不难，过程可以参考「206. 反转链表」。但是对于一个子链表，除了翻转其本身之外，还需要将子链表的头部与上一个子链表连接，以及子链表的尾部与下一个子链表连接。
+
+因此，在翻转子链表的时候，我们不仅需要子链表头节点 `head`，还需要有 `head` 的上一个节点 `pre`，以便翻转完后把子链表再接回 `pre`。
+
+但是对于第一个子链表，它的头节点 head 前面是没有节点 pre 的。太麻烦了！难道只能特判了吗？答案是否定的。没有条件，我们就创造条件；没有节点，我们就创建一个节点。我们新建一个节点，把它接到链表的头部，让它作为 pre 的初始值，这样 head 前面就有了一个节点，我们就可以避开链表头部的边界条件。
+
+反复移动指针 `head` 与 `pre`，对 `head` 所指向的子链表进行翻转，直到结尾，我们就得到了答案。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number} k
+ * @return {ListNode}
+ */
+var reverseKGroup = function(head, k) {
+    const dummyHead = new ListNode(-1);  // 哑结点
+    dummyHead.next = head;
+
+    let pre = dummyHead;
+
+    while (head) {
+        let tail = pre;
+        // 查看剩余部分长度是否大于等于 k
+        for (let i = 0; i < k; i++) {
+            tail = tail.next;
+            if (!tail) {
+                return dummyHead.next;
+            }
+        }
+        const next = tail.next;
+        [head, tail] = myReverse(head, tail);
+        
+        // 把子链表重新接回原链表
+        pre.next = head;
+        tail.next = next;
+        pre = tail;
+        head = tail.next;
+    }
+    return dummyHead.next;
+};
+
+const myReverse = (head, tail) => {
+    let prev = tail.next;
+    let p = head;
+    while (prev !== tail) {
+        const next = p.next;
+        p.next = prev;
+        prev = p;
+        p = next;
+    }
+    return [tail, head];
+}
+
+module.exports = {
+    reverseKGroup : reverseKGroup
+};
+```
+
+
+
+
+
+----
+
+## **BM4** **合并两个排序的链表**
+
+将两个升序链表合并为一个新的 **升序** 链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。 
+
+**提示：**
+
+- 两个链表的节点数目范围是 `[0, 50]`
+- `-100 <= Node.val <= 100`
+- `l1` 和 `l2` 均按 **非递减顺序** 排列
+
+
+
+#### 递归
+
+```js
+/*function ListNode(x){
+    this.val = x;
+    this.next = null;
+}*/
+function Merge(pHead1, pHead2)
+{
+    if (pHead1 === null) {
+        return pHead2;
+    } else if (pHead2 === null) {
+        return pHead1;
+    } else if (pHead1.val < pHead2.val) {
+        pHead1.next = Merge(pHead1.next, pHead2);
+        return pHead1;
+    } else {
+        pHead2.next = Merge(pHead1, pHead2.next);
+        return pHead2;
+    }
+}
+module.exports = {
+    Merge : Merge
+};
+```
+
+
+
+#### 迭代
+
+```js
+function ListNode(x){
+    this.val = x;
+    this.next = null;
+}
+
+function Merge(pHead1, pHead2){
+     if (pHead1 === null) {
+        return pHead2;
+    }
+    if (pHead2 === null) {
+        return pHead1;
+    }
+    const preHead = new ListNode(-1);
+
+    let prev = preHead;
+    while (pHead1 !== null && pHead2 !== null) {
+        if (pHead1.val <= pHead2.val) {
+            prev.next = pHead1;
+            pHead1 = pHead1.next;
+        } else {
+            prev.next = pHead2;
+            pHead2 = pHead2.next;
+        }
+        prev = prev.next;
+    }
+    // 合并后 l1 和 l2 最多只有一个还未被合并完，我们直接将链表末尾指向未合并完的链表即可
+    prev.next = pHead1 === null ? pHead2 : pHead1;
+
+    return preHead.next;
+}
+module.exports = {
+    Merge : Merge
+};
+```
+
+
+
+----
+
+## **BM5** **合并k个已排序的链表**
+
+给你一个链表数组，每个链表都已经按升序排列。
+
+请你将所有链表合并到一个升序链表中，返回合并后的链表。
+
+要求：时间复杂度 O(nlogk)
+
+
+
+#### 顺序合并
+
+我们可以想到一种最朴素的方法：用一个变量ans 来维护以及合并的链表，第 i 次循环把第 i 个链表和ans 合并，答案保存到 ans 中。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+function MergeTwoLists(pHead1, pHead2){
+     if (pHead1 === null) {
+        return pHead2;
+    }
+    if (pHead2 === null) {
+        return pHead1;
+    }
+    const preHead = new ListNode(-1);
+
+    let prev = preHead;
+    while (pHead1 !== null && pHead2 !== null) {
+        if (pHead1.val <= pHead2.val) {
+            prev.next = pHead1;
+            pHead1 = pHead1.next;
+        } else {
+            prev.next = pHead2;
+            pHead2 = pHead2.next;
+        }
+        prev = prev.next;
+    }
+    // 合并后 l1 和 l2 最多只有一个还未被合并完，我们直接将链表末尾指向未合并完的链表即可
+    prev.next = pHead1 === null ? pHead2 : pHead1;
+
+    return preHead.next;
+}
+
+/**
+ * 
+ * @param lists ListNode类一维数组 
+ * @return ListNode类
+ */
+function mergeKLists( lists ) {
+    // write code here
+    let ans = null, n = lists.length;
+    for (let i = 0; i < n; i++) {
+        ans = MergeTwoLists(ans, lists[i]);
+    }
+    return ans;
+}
+
+module.exports = {
+    mergeKLists : mergeKLists
+};
+```
+
+
+
+#### 分治合并
+
+![合并k个链表](E:\pogject\学习笔记\image\niuke\合并k个链表.png)
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+function MergeTwoLists(pHead1, pHead2){
+     if (pHead1 === null) {
+        return pHead2;
+    }
+    if (pHead2 === null) {
+        return pHead1;
+    }
+    const preHead = new ListNode(-1);
+
+    let prev = preHead;
+    while (pHead1 !== null && pHead2 !== null) {
+        if (pHead1.val <= pHead2.val) {
+            prev.next = pHead1;
+            pHead1 = pHead1.next;
+        } else {
+            prev.next = pHead2;
+            pHead2 = pHead2.next;
+        }
+        prev = prev.next;
+    }
+    // 合并后 l1 和 l2 最多只有一个还未被合并完，我们直接将链表末尾指向未合并完的链表即可
+    prev.next = pHead1 === null ? pHead2 : pHead1;
+
+    return preHead.next;
+}
+
+function merge(lists, left, right) {
+    if (left === right) {
+        return lists[left];
+    }
+    if (left > right) {
+        return null;
+    }
+    const mid = (left + right) >> 1;
+    return MergeTwoLists(merge(lists, left, mid), merge(lists, mid + 1, right));
+}
+/**
+ * 
+ * @param lists ListNode类一维数组 
+ * @return ListNode类
+ */
+function mergeKLists( lists ) {
+    // write code here
+    return merge(lists, 0, lists.length - 1);
+}
+
+module.exports = {
+    mergeKLists : mergeKLists
+};
+```
+
+
+
+#### 使用优先队列合并
+
+这个方法和前两种方法的思路有所不同，我们需要维护当前每个链表没有被合并的元素的最前面一个，kk 个链表就最多有 kk 个满足这样条件的元素，每次在这些元素里面选取 \textit{val}val 属性最小的元素合并到答案中。在选取最小元素的时候，我们可以用优先队列来优化这个过程。
+
+思路：新建小顶堆，小顶堆的大小是k，不断从每个链表的头节点开始不断加入小顶堆中，然后取出堆顶值，也就是最小值，然后继续往小顶堆中插入这个最小值在链表的next节点
+复杂度：时间复杂度O(kn * logk)，优先队列的大小是k，每次插入和删除是O(logk)，总共k * n的节点个数，每个节点插入删除一次，所以总的复杂度是O(kn*logk)。空间复杂度是O(k)，即优先队列的大小
+
+```js
+class Heap {
+    constructor(comparator = (a, b) => a - b, data = []) {
+        this.data = data;
+        this.comparator = comparator;  // 比较器
+        this.heapify();  // 堆化
+    }
+
+    heapify() {
+        if (this.size() < 2) {
+            return;
+        }
+        for (let i = Math.floor(this.size() / 2) - 1; i >= 0; i--) {
+            this.bubbleDowm(i);  // bubbleDown操作
+        }
+    }
+
+    peek() {
+        if (this.size() === 0) {
+            return null;
+        }
+        return this.data[0];  // 查看堆顶
+    }
+
+    offer(value) {
+        this.data.push(value);  // 加入数组
+        this.bubbleUp(this.size() - 1);  //调整加入的元素在小顶堆中的位置
+    }
+
+    poll() {
+        if (this.size() === 0) {
+            return null;
+        }
+        const result = this.data[0];
+        const last = this.data.pop();
+        if (this.size() !== 0) {
+            this.data[0] = last;  // 交换第一个元素和最后一个元素
+            this.bubbleDowm(0);  // bubbleDown操作
+        }
+        return result;
+    }
+
+    bubbleUp(index) {
+        while (index > 0) {
+            const parentIndex = (index - 1) >> 1;  // 父节点的位置
+            //如果当前元素比父节点的元素小，就交换当前节点和父节点的位置
+            if (this.comparator(this.data[index], this.data[parentIndex]) < 0) {
+                this.swap(index, parentIndex);  //交换自己和父节点的位置
+                index = parentIndex;
+            } else {
+                break;  //如果当前元素比父节点的元素大，不需要处理
+            }
+        }
+    }
+
+    bubbleDowm(index) {
+        const lastIndex = this.size() - 1;  // 最后一个节点的位置
+        while (true) {
+            const leftIndex = index * 2 + 1;  //左节点的位置
+            const rightIndex = index * 2 + 2;  //右节点的位置
+            let findIndex = index;  //bubbleDown节点的位置
+            //找出左右节点中value小的节点
+            if (leftIndex <= lastIndex && this.comparator(this.data[leftIndex], this.data[findIndex]) < 0) {
+                findIndex = leftIndex;
+            }
+            if (rightIndex <= lastIndex && this.comparator(this.data[rightIndex], this.data[findIndex]) < 0) {
+                finished = rightIndex;
+            }
+            if (index !== findIndex) {
+                this.swap(index, findIndex);  //交换当前元素和左右节点中value小的
+                index = findIndex;
+            } else {
+                break;
+            }
+        }
+    }
+
+    swap(index1, index2) {
+        [this.data[index1], this.data[index2]] = [this.data[index2], this.data[index1]]
+    }
+
+    size() {
+        return this.data.length;
+    }
+}
+
+
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+function mergeKLists(lists){
+    const res = new ListNode(-1);
+
+    let prev = res;
+
+    const h = new Heap(comparator = (a, b) => a.val - b.val);
+
+    lists.forEach(list => {
+        //插入每个链表的第一个节点
+        if (list) {
+            h.offer(list);
+        }
+    });
+    while (h.size()) {
+       const n = h.poll();  //取出最小值
+       prev.next = n;  //最小值加入p的next后
+       prev = prev.next;  // 移动节点
+       if (n.next) {
+        h.offer(n.next);  //插入最小节点的后一个节点
+       }
+    }
+
+    return res.next;
+}
+
+
+module.exports = {
+    mergeKLists : mergeKLists
+};
+```
+
+
+
+----
+
+## **BM6** **判断链表中是否有环**
