--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -735,3 +735,477 @@ module.exports = {
 ----
 
 ## **BM6** **判断链表中是否有环**
+
+给你一个链表的头节点 head ，判断链表中是否有环。
+
+如果链表中有某个节点，可以通过连续跟踪 next 指针再次到达，则链表中存在环。 为了表示给定链表中的环，评测系统内部使用整数 pos 来表示链表尾连接到链表中的位置（索引从 0 开始）。注意：pos 不作为参数进行传递 。仅仅是为了标识链表的实际情况。
+
+如果链表中存在环 ，则返回 true 。 否则，返回 false 。
+
+#### **哈希表**
+
+最容易想到的方法是遍历所有节点，每次遍历到一个节点时，判断该节点此前是否被访问过。
+
+具体地，我们可以使用哈希表来存储所有已经访问过的节点。每次我们到达一个节点，如果该节点已经存在于哈希表中，则说明该链表是环形链表，否则就将该节点加入哈希表中。重复这一过程，直到我们遍历完整个链表即可。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+ * 
+ * @param head ListNode类 
+ * @return bool布尔型
+ */
+function hasCycle( head ) {
+    // write code here
+    const visited = new Set();
+    while(head !== null) {
+        if (visited.has(head)) {
+            return true;
+        }
+        visited.add(head);
+        head = head.next;
+    }
+    return false;
+}
+module.exports = {
+    hasCycle : hasCycle
+};
+```
+
+
+
+#### **快慢指针**
+
+具体地，我们定义两个指针，一快一慢。慢指针每次只移动一步，而快指针每次移动两步。初始时，慢指针在位置 head，而快指针在位置 head.next。这样一来，如果在移动的过程中，快指针反过来追上慢指针，就说明该链表为环形链表。否则快指针将到达链表尾部，该链表不为环形链表。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+ * 
+ * @param head ListNode类 
+ * @return bool布尔型
+ */
+function hasCycle( head ) {
+    // write code here
+    if (head === null || head.next === null) {
+        return false;
+    }
+    let slow = head;
+    let fast = head.next;
+    while(slow !== fast) {
+        if (fast === null || fast.next === null) {
+            return false;
+        }
+        slow = slow.next;
+        fast = fast.next.next;
+    }
+    return true;;
+}
+module.exports = {
+    hasCycle : hasCycle
+};
+```
+
+
+
+----
+
+## **BM7** **链表中环的入口结点**
+
+#### 哈希表
+
+一个非常直观的思路是：我们遍历链表中的每个节点，并将它记录下来；一旦遇到了此前遍历过的节点，就可以判定链表中存在环。借助哈希表可以很方便地实现。
+
+```js
+/*function ListNode(x){
+    this.val = x;
+    this.next = null;
+}*/
+function EntryNodeOfLoop(pHead)
+{
+    // write code here
+    const visited = new Set();
+    while (head !== null) {
+        if (visited.has(head)) {
+            return head;
+        }
+        visited.add(head);
+        head = head.next;
+    }
+    return null;
+}
+module.exports = {
+    EntryNodeOfLoop : EntryNodeOfLoop
+};
+```
+
+
+
+#### 快慢指针
+
+![环形链表入口节点](E:\pogject\学习笔记\image\niuke\环形链表入口节点.png)
+
+```js
+/*function ListNode(x){
+    this.val = x;
+    this.next = null;
+}*/
+function EntryNodeOfLoop(head)
+{
+    if (head === null) {
+        return null;
+    }
+    let slow = head, fast = head;
+
+    while (fast !== null) {
+        slow = slow.next;
+        if (fast.next !== null) {
+            fast = fast.next.next;
+        } else {
+            return null;
+        }
+        if (fast === slow) {
+            let ptr = head;
+            while (ptr !== slow) {
+                ptr = ptr.next;
+                slow = slow.next;
+            }
+            return ptr;
+        }
+    }
+    return null;
+}
+module.exports = {
+    EntryNodeOfLoop : EntryNodeOfLoop
+};
+```
+
+
+
+----
+
+## **BM8** **链表中倒数最后k个结点**
+
+输入一个链表，输出该链表中倒数第k个节点。为了符合大多数人的习惯，本题从1开始计数，即链表的尾节点是倒数第1个节点。
+
+如果该链表长度小于k，请返回一个长度为 0 的链表。
+
+例如，一个链表有 6 个节点，从头节点开始，它们的值依次是 1、2、3、4、5、6。这个链表的倒数第 3 个节点是值为 4 的节点。
+
+#### 顺序查找
+
+思路与算法
+
+最简单直接的方法即为顺序查找，假设当前链表的长度为 nn，则我们知道链表的倒数第 kk 个节点即为正数第 n - kn−k 个节点，此时我们只需要顺序遍历到链表的第 n - kn−k 个节点即为倒数第 kk 个节点。
+
+我们首先求出链表的长度 nn，然后顺序遍历到链表的第 n - kn−k 个节点返回即可。
+
+```go
+func getKthFromEnd(head *ListNode, k int) (kth *ListNode) {
+    n := 0
+    for node := head; node != nil; node = node.Next {
+        n++
+    }
+    for kth = head; n > k; n-- {
+        kth = kth.Next
+    }
+    return
+}
+
+```
+
+#### 双指针
+
+快慢指针的思想。我们将第一个指针 \textit{fast}fast 指向链表的第 k + 1k+1 个节点，第二个指针 \textit{slow}slow 指向链表的第一个节点，此时指针 \textit{fast}fast 与 \textit{slow}slow 二者之间刚好间隔 kk 个节点。此时两个指针同步向后走，当第一个指针 \textit{fast}fast 走到链表的尾部空节点时，则此时 \textit{slow}slow 指针刚好指向链表的倒数第kk个节点。
+
+我们首先将 \textit{fast}fast 指向链表的头节点，然后向后走 kk 步，则此时 \textit{fast}fast 指针刚好指向链表的第 k + 1k+1 个节点。
+
+我们首先将 \textit{slow}slow 指向链表的头节点，同时 \textit{slow}slow 与 \textit{fast}fast 同步向后走，当 \textit{fast}fast 指针指向链表的尾部空节点时，则此时返回 \textit{slow}slow 所指向的节点即可。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+/**
+ * 代码中的类名、方法名、参数名已经指定，请勿修改，直接返回方法规定的值即可
+ *
+ * 
+ * @param pHead ListNode类 
+ * @param k int整型 
+ * @return ListNode类
+ */
+function FindKthToTail( head ,  k ) {
+    // write code here
+    let fast = head, slow = head;
+
+    while (fast && k > 0) {
+        [fast, k] = [fast.next, k - 1];
+    }
+    if (k > 0) {
+        return null;
+    }
+    while (fast) {
+        [fast, slow] = [fast.next, slow.next];
+    }
+    return slow;
+}
+module.exports = {
+    FindKthToTail : FindKthToTail
+};
+```
+
+
+
+----
+
+## **BM9** **删除链表的倒数第n个节点**
+
+给你一个链表，删除链表的倒数第 `n` 个结点，并且返回链表的头结点。
+
+
+
+在对链表进行操作时，一种常用的技巧是添加一个哑节点（dummy node），它的 \textit{next}next 指针指向链表的头节点。这样一来，我们就不需要对头节点进行特殊的判断了。
+
+例如，在本题中，如果我们要删除节点 yy，我们需要知道节点 yy 的前驱节点 xx，并将 xx 的指针指向 yy 的后继节点。但由于头节点不存在前驱节点，因此我们需要在删除头节点时进行特殊判断。但如果我们添加了哑节点，那么头节点的前驱节点就是哑节点本身，此时我们就只需要考虑通用的情况即可。
+
+特别地，在某些语言中，由于需要自行对内存进行管理。因此在实际的面试中，对于「是否需要释放被删除节点对应的空间」这一问题，我们需要和面试官进行积极的沟通以达成一致。下面的代码中默认不释放空间。
+
+#### 计算链表长度
+
+一种容易想到的方法是，我们首先从头节点开始对链表进行一次遍历，得到链表的长度 LL。随后我们再从头节点开始对链表进行一次遍历，当遍历到第 L-n+1L−n+1 个节点时，它就是我们需要删除的节点。
+
+为了方便删除操作，我们可以从哑节点开始遍历 L-n+1L−n+1 个节点。当遍历到第 L-n+1L−n+1 个节点时，它的下一个节点就是我们需要删除的节点，这样我们只需要修改一次指针，就能完成删除操作。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+  * 
+  * @param head ListNode类 
+  * @param n int整型 
+  * @return ListNode类
+  */
+function removeNthFromEnd( head ,  n ) {
+    // write code here
+    const dummyNode = new ListNode(-1);
+    dummyNode.next = head;
+
+    const len = getLength(head);
+    let cur =dummyNode;
+    for (let i = 1; i < len - n + 1; i++) {
+        cur = cur.next;
+    }
+    cur.next = cur.next.next;
+
+    return dummyNode.next;
+}
+
+function getLength(head) {
+    let len = 0;
+    while (head !== null) {
+        len++;
+        head = head.next;
+    }
+    return len;
+}
+module.exports = {
+    removeNthFromEnd : removeNthFromEnd
+};
+```
+
+
+
+#### 栈
+
+我们也可以在遍历链表的同时将所有节点依次入栈。根据栈「先进后出」的原则，我们弹出栈的第 nn 个节点就是需要删除的节点，并且目前栈顶的节点就是待删除节点的前驱节点。这样一来，删除操作就变得十分方便了。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+  * 
+  * @param head ListNode类 
+  * @param n int整型 
+  * @return ListNode类
+  */
+function removeNthFromEnd( head ,  n ) {
+    // write code here
+    const dummyNode = new ListNode(-1);
+    dummyNode.next = head;
+
+    const stack = [];
+
+    let cur =dummyNode;
+    while (cur !== null) {
+        stack.push(cur);
+        cur= cur.next;
+    }
+    for (let i = 0; i < n; i++) {
+        stack.pop();
+    }
+    let prev = stack[stack.length - 1];
+    prev.next = prev.next.next;
+
+    return dummyNode.next;
+}
+
+module.exports = {
+    removeNthFromEnd : removeNthFromEnd
+};
+```
+
+
+
+#### 双指针
+
+由于我们需要找到倒数第 nn 个节点，因此我们可以使用两个指针 \textit{first}first 和 \textit{second}second 同时对链表进行遍历，并且 \textit{first}first 比 \textit{second}second 超前 nn 个节点。当 \textit{first}first 遍历到链表的末尾时，\textit{second}second 就恰好处于倒数第 nn 个节点。
+
+根据方法一和方法二，如果我们能够得到的是倒数第 nn 个节点的前驱节点而不是倒数第 nn 个节点的话，删除操作会更加方便。因此我们可以考虑在初始时将 \textit{second}second 指向哑节点，其余的操作步骤不变。这样一来，当 \textit{first}first 遍历到链表的末尾时，\textit{second}second 的下一个节点就是我们需要删除的节点。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+  * 
+  * @param head ListNode类 
+  * @param n int整型 
+  * @return ListNode类
+  */
+function removeNthFromEnd( head ,  n ) {
+    // write code here
+    const dummyNode = new ListNode(-1);
+    dummyNode.next = head;
+
+    let first = head, second = dummyNode;
+
+    for (let i = 0; i < n; i++) {
+        first = first.next;
+    }
+    while (first !== null) {
+        first = first.next;
+        second = second.next;
+    }
+    
+    second.next = second.next.next;  // 删除结点
+
+    return dummyNode.next;
+}
+
+module.exports = {
+    removeNthFromEnd : removeNthFromEnd
+};
+```
+
+
+
+----
+
+## **BM10** **两个链表的第一个公共结点**
+
+#### 哈希集合
+
+判断两个链表是否相交，可以使用哈希集合存储链表节点。
+
+首先遍历链表 \textit{headA}headA，并将链表 \textit{headA}headA 中的每个节点加入哈希集合中。然后遍历链表 \textit{headB}headB，对于遍历到的每个节点，判断该节点是否在哈希集合中：
+
+如果当前节点不在哈希集合中，则继续遍历下一个节点；
+
+如果当前节点在哈希集合中，则后面的节点都在哈希集合中，即从当前节点开始的所有节点都是两个链表的公共节点，因此在链表 \textit{headB}headB 中遍历到的第一个在哈希集合中的节点就是两个链表的第一个公共节点，返回该节点。
+
+如果链表 \textit{headB}headB 中的所有节点都不在哈希集合中，则两个链表不相交，返回 \text{null}null。
+
+```go
+func getIntersectionNode(headA, headB *ListNode) *ListNode {
+    vis := map[*ListNode]bool{}
+    for tmp := headA; tmp != nil; tmp = tmp.Next {
+        vis[tmp] = true
+    }
+    for tmp := headB; tmp != nil; tmp = tmp.Next {
+        if vis[tmp] {
+            return tmp
+        }
+    }
+    return nil
+}
+
+
+```
+
+
+
+#### 双指针
+
+使用双指针的方法，可以将空间复杂度降至 O(1)O(1)。
+
+只有当链表 \textit{headA}headA 和 \textit{headB}headB 都不为空时，两个链表才可能相交。因此首先判断链表 \textit{headA}headA 和 \textit{headB}headB 是否为空，如果其中至少有一个链表为空，则两个链表一定不相交，返回 \text{null}null。
+
+当链表 \textit{headA}headA 和 \textit{headB}headB 都不为空时，创建两个指针 \textit{pA}pA 和 \textit{pB}pB，初始时分别指向两个链表的头节点 \textit{headA}headA 和 \textit{headB}headB，然后将两个指针依次遍历两个链表的每个节点。具体做法如下：
+
+- 每步操作需要同时更新指针 \textit{pA}pA 和 \textit{pB}pB。
+
+- 如果指针 \textit{pA}pA 不为空，则将指针 \textit{pA}pA 移到下一个节点；如果指针 \textit{pB}pB 不为空，则将指针 \textit{pB}pB 移到下一个节点。
+
+- 如果指针 \textit{pA}pA 为空，则将指针 \textit{pA}pA 移到链表 \textit{headB}headB 的头节点；如果指针 \textit{pB}pB 为空，则将指针 \textit{pB}pB 移到链表 \textit{headA}headA 的头节点。
+
+- 当指针 \textit{pA}pA 和 \textit{pB}pB 指向同一个节点或者都为空时，返回它们指向的节点或者 \text{null}null。
+
+
+```js
+/*function ListNode(x){
+    this.val = x;
+    this.next = null;
+}*/
+function FindFirstCommonNode(pHead1, pHead2)
+{
+    // write code here
+    if (pHead1 === null || pHead2 === null) {
+        return null;
+    }
+    let p1 = pHead1, p2 = pHead2;
+    while (p1 !== p2) {
+        p1 = p1 === null ? pHead2 : p1.next;
+        p2 = p2 === null ? pHead1 : p2.next;
+    }
+    return p1;
+}
+module.exports = {
+    FindFirstCommonNode : FindFirstCommonNode
+};
+```
+
+复杂度分析
+
+时间复杂度：O(m+n)O(m+n)，其中 mm 和 nn 是分别是链表 \textit{headA}headA 和 \textit{headB}headB 的长度。两个指针同时遍历两个链表，每个指针遍历两个链表各一次。
+
+空间复杂度：O(1)O(1)。
+
