--- a/牛客/牛客必刷题.md
+++ b/牛客/牛客必刷题.md
@@ -1209,3 +1209,326 @@ module.exports = {
 
 空间复杂度：O(1)O(1)。
 
+
+
+----
+
+## **BM11** **链表中的两数相加**
+
+给定两个 非空链表 l1和 l2 来代表两个非负整数。数字最高位位于链表开始位置。它们的每个节点只存储一位数字。将这两数相加会返回一个新的链表。
+
+可以假设除了数字 0 之外，这两个数字都不会以零开头。
+
+```
+输入：l1 = [7,2,4,3], l2 = [5,6,4]
+输出：[7,8,0,7]
+```
+
+提示：
+
+链表的长度范围为 [1, 100]
+0 <= node.val <= 9
+输入数据保证链表代表的数字无前导 0
+
+
+进阶：如果输入链表不能修改该如何处理？换句话说，不能对列表中的节点进行翻转。
+
+
+
+#### 栈
+
+本题的主要难点在于链表中数位的顺序与我们做加法的顺序是相反的，为了逆序处理所有数位，我们可以使用栈：把所有数字压入栈中，再依次取出相加。计算过程中需要注意进位的情况。
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+ * 
+ * @param head1 ListNode类 
+ * @param head2 ListNode类 
+ * @return ListNode类
+ */
+function addInList( head1 ,  head2 ) {
+    // write code here
+    let stack1 = [], stack2 = [];
+    while (head1 !== null) {
+        stack1.push(head1.val);
+        head1 = head1.next;
+    }
+    while (head2 !== null) {
+        stack2.push(head2.val);
+        head2 = head2.next;
+    }
+
+    let carry = 0;
+    let ans = null;
+    while (stack1.length !== 0 || stack2.length !== 0 || carry !== 0) {
+        let a = stack1.length ? stack1.pop() : 0;
+        let b = stack2.length ? stack2.pop() : 0;
+        let cur = a + b + carry;
+        carry = cur > 9 ? 1 : 0;
+        cur %= 10;
+        let curNode = new ListNode(cur);
+        curNode.next = ans;
+        ans = curNode;
+    }
+    return ans;
+}
+module.exports = {
+    addInList : addInList
+};
+```
+
+
+
+#### 反转链表+双指针求和
+
+先把l1和l2都进行反转
+然后通过双指针进行求和
+最后把结果再进行反转即可了
+
+```js
+var addTwoNumbers = function(l1, l2) {
+    // 反转链表
+    function reverse(head) {
+        var pre = null;
+        var cur = head;
+        while (cur) {
+            var next = cur.next;
+            cur.next = pre;
+            pre = cur;
+            cur = next;
+        }
+        return pre;
+    }
+    // 进行两数想加
+    var reverseL1 = reverse(l1);
+    var reverseL2 = reverse(l2);
+    var res = null;
+    var carry = 0;
+    var tail = res;
+    while (reverseL1 || reverseL2) {
+        const x = reverseL1 ? reverseL1.val - '0' : 0;
+        const y = reverseL2 ? reverseL2.val - '0' : 0;
+        const sum = x + y + carry;
+        if (!res) {
+            res = tail = new ListNode(sum % 10);
+        } else {
+            tail.next = new ListNode(sum % 10);
+            tail = tail.next;
+        }
+        carry = Math.floor(sum / 10);
+        if(reverseL1) reverseL1 = reverseL1.next;
+        if(reverseL2) reverseL2 = reverseL2.next;
+    }
+    if (carry) tail.next = new ListNode(carry);
+
+    // 最后再反转链表=
+    return reverse(res);
+};
+
+```
+
+
+
+-----
+
+## **BM12** **单链表的排序**
+
+给你链表的头结点 `head` ，请将其按 **升序** 排列并返回 **排序后的链表** 。
+
+**进阶：**你可以在 `O(n log n)` 时间复杂度和常数级空间复杂度下，对链表进行排序吗？
+
+要求使用插入排序的方法对链表进行排序，插入排序的时间复杂度是 O(n^2)O(n 2 )，其中 nn 是链表的长度。这道题考虑时间复杂度更低的排序算法。题目的进阶问题要求达到 O(n \log n)O(nlogn) 的时间复杂度和 O(1)O(1) 的空间复杂度，时间复杂度是 O(n \log n)O(nlogn) 的排序算法包括归并排序、堆排序和快速排序（快速排序的最差时间复杂度是 O(n^2)O(n 2 )），其中最适合链表的排序算法是归并排序。
+
+归并排序基于分治算法。最容易想到的实现方式是自顶向下的递归实现，考虑到递归调用的栈空间，自顶向下归并排序的空间复杂度是 O(\log n)O(logn)。如果要达到 O(1)O(1) 的空间复杂度，则需要使用自底向上的实现方式。
+
+#### 自顶向下归并排序
+
+对链表自顶向下归并排序的过程如下。
+
+找到链表的中点，以中点为分界，将链表拆分成两个子链表。寻找链表的中点可以使用快慢指针的做法，快指针每次移动 22 步，慢指针每次移动 11 步，当快指针到达链表末尾时，慢指针指向的链表节点即为链表的中点。
+
+对两个子链表分别排序。
+
+将两个排序后的子链表合并，得到完整的排序后的链表。可以使用「21. 合并两个有序链表」的做法，将两个有序的子链表进行合并。
+
+上述过程可以通过递归实现。递归的终止条件是链表的节点个数小于或等于 11，即当链表为空或者链表只包含 11 个节点时，不需要对链表进行拆分和排序。
+
+
+
+```js
+/*
+ * function ListNode(x){
+ *   this.val = x;
+ *   this.next = null;
+ * }
+ */
+
+/**
+ * 
+ * @param head ListNode类 the head node
+ * @return ListNode类
+ */
+function sortInList( head ) {
+    // write code here
+    return toSortList(head, null);
+};
+
+const toSortList = (head, tail) => {
+    if (head === null) {
+        return head;
+    }
+    if (head.next === tail) {
+        head.next = null;
+        return head;
+    }
+    let slow = head, fast = head;
+    while (fast !== tail) {
+        slow = slow.next;
+        fast = fast.next;
+        if (fast !== tail) {
+            fast = fast.next;
+        }
+    }
+    const mid = slow;
+    return merge(toSortList(head, mid), toSortList(mid, tail));
+}
+
+const merge = (head1, head2) => {
+    if (head1 === null) {
+        return head2;
+    }
+    if (head2 === null) {
+        return head1;
+    }
+
+    const dummyNode = new ListNode(-1);
+    let pre = dummyNode;
+    while (head1 !== null && head2 !== null) {
+        if (head1.val <= head2.val) {
+            pre.next = head1;
+            head1 = head1.next;
+        } else {
+            pre.next = head2;
+            head2 = head2.next;
+        }
+        pre = pre.next;
+    }
+    pre.next = head1 === null ? head2 : head1;
+
+    return dummyNode.next;
+}
+
+module.exports = {
+    sortInList : sortInList
+};
+```
+
+复杂度分析
+
+时间复杂度：O(n \log n)O(nlogn)，其中 nn 是链表的长度。
+
+空间复杂度：O(\log n)O(logn)，其中 nn 是链表的长度。空间复杂度主要取决于递归调用的栈空间。
+
+
+
+#### 自底向上归并排序
+
+![自底向上归并排序链表](E:\pogject\学习笔记\image\niuke\自底向上归并排序链表.png)
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var sortList = function(head) {
+    if (head === null) {
+        return head;
+    }
+    let len = 0;
+    let node = head;
+    while (node !== null) {
+        len++;
+        node = node.next;
+    }
+
+    const dummyNode = new ListNode(-1, head);
+
+    for (let subLen = 1; subLen < len; subLen <<= 1) {
+        let prev = dummyNode, curr = dummyNode.next;
+        while (curr !== null) {
+            let head1 = curr;
+            for (let i = 1; i < subLen && curr.next !== null; i++) {
+                curr = curr.next;
+            }
+            let head2 = curr.next;
+            curr.next = null;
+            curr = head2;
+            for (let i = 1; i < subLen && curr !== null && curr.next !== null; i++) {
+                curr = curr.next;
+            }
+            let next = null;
+            if (curr !== null) {
+                next = curr.next;
+                curr.next = null;
+            }
+            const merged = merge(head1, head2);
+            prev.next = merged;
+            while (prev.next !== null) {
+                prev = prev.next;
+            }
+            curr = next;
+        }
+    }
+    return dummyNode.next;
+};
+
+
+const merge = (head1, head2) => {
+    if (head1 === null) {
+        return head2;
+    }
+    if (head2 === null) {
+        return head1;
+    }
+
+    const dummyNode = new ListNode(-1);
+    let pre = dummyNode;
+    while (head1 !== null && head2 !== null) {
+        if (head1.val <= head2.val) {
+            pre.next = head1;
+            head1 = head1.next;
+        } else {
+            pre.next = head2;
+            head2 = head2.next;
+        }
+        pre = pre.next;
+    }
+    pre.next = head1 === null ? head2 : head1;
+
+    return dummyNode.next;
+}
+```
+
+**复杂度分析**
+
+- 时间复杂度：O(n \log n)*O*(*n*log*n*)，其中 n*n* 是链表的长度。
+- 空间复杂度：O(1)*O*(1)。
+
+
+
+----
+
