--- a/面试学习题目/错题笔记.md
+++ b/面试学习题目/错题笔记.md
@@ -300,8 +300,6 @@ console.log([]==false?true:false); // => console.log(0==0?true:false);
 console.log(({}==false)?true:false); // => console.log((NaN==0)?true:false);
 ```
 
-### 《JavaScript权威指南》的部分相关知识点
-
 ------
 
 **“==”运算符（两个操作数的类型不相同时）**
@@ -329,7 +327,216 @@ console.log(({}==false)?true:false); // => console.log((NaN==0)?true:false);
 
 ---
 
+## jQuery中获取当前窗口属性值
 
+```js
+alert($(window).height()); //浏览器当前窗口可视区域高度 
+alert($(document).height()); //浏览器当前窗口文档的高度 
+
+alert($(document.body).height());//浏览器当前窗口文档body的高度 
+alert($(document.body).outerHeight(true));//浏览器当前窗口文档body的总高度 包括border padding margin 
+
+alert($(window).width()); //浏览器当前窗口可视区域宽度 
+alert($(document).width());//浏览器当前窗口文档对象宽度 
+
+alert($(document.body).width());//浏览器当前窗口文档body的高度 
+alert($(document.body).outerWidth(true));//浏览器当前窗口文档body的总宽度 包括border padding margin 
+```
+
+
+
+----
+
+## 函数提升
+
+```js
+var a = 100;
+
+function a(){
+	var a = 200;
+	console.log(a);
+}
+
+a();  // VM47:8 Uncaught TypeError: a is not a function    at <anonymous>:8:1
+```
+
+在预解析下，函数和变量都会发生提升，**且函数提升在变量提升之前**，故在全局作用域下，a首先被定义为函数变量，接着又被覆盖为一个数值型，然后再调用函数a，显然会抛出异常，**原因是a已经不再是函数**。在函数内部，还存在着局部变量a，但它对函数外部的变量不会产生影响。
+
+
+
+----
+
+## isNaN()函数
+
+isNaN()函数用来判断一个数是否是NaN;
+    
+
+```js
+  	// 只有一个值是NaN或者能被转换为NaN的时候才返回true 
+      console.log(isNaN('e'));//true,因为e可以被转换为NaN 
+      console.log(isNaN('11'));//false,因为字符串可以被转换为数字,不能被转为NaN 
+      console.log(isNaN(null));//false,因为null可以被转换为0,不能被转为NaN 
+      console.log(isNaN(NaN));// true,NaN返回true
+```
+
+​      
+
+```js
+  // 2. parseInt(string,raix)函数有两个参数
+
+  // 2.1 注意:string字符串只会被解析从第一个字符开始直到不是数字的字符部分
+  console.log(parseInt('223'));//223
+
+  // 2.2 当字符串中间存在非数字,那么就只解析前面是数字的部分字符
+  console.log(parseInt('22e3'));//22
+
+  // 2.3 如果字符串中第一个字符就不是数字,那么返回NaN 
+  console.log(parseInt('e21'));//NaN
+  
+  // 对于parseInt()函数还有一个易考点,就是利用数组的下标,还记得parseInt()函数的第二个参数吗？
+
+  // 2.4 parseInt()函数的第二个参数指的就是进制,这个参数小于2或者大于36的时候,都会返回NaN 
+  console.log(parseInt(1,1));//NaN ,因为第二个参数是1表示1进制<2,所以错误
+  console.log(parseInt(1,2));//1,因为表示二进制 =2,在范围内
+
+  // 2.5 我们一般都是省略这个参数的,这个时候就是默认为10进制
+  console.log(parseInt(99));//99
+
+  // 2.6 我们第二个参数使用0的时候也是使用十进制
+  console.log(parseInt(99,0));//99
+
+  // 2.7 如果第一个参数前缀使用0x/0X则表示使用16进制
+  console.log(parseInt(0x99));//153=16*9+9
+
+  console.log(parseInt(0x99,10));//如果第一个参数使用了0x表示十六进制,那么第二个参数设置了值也无效
+```
+
+
+
+```js
+var arr=[1,2,3,2,5];
+console.log(arr.map(parseInt));//[1, NaN, NaN, 2, NaN]
+```
+
+```js
+ // arr.map方法就是对于数组arr里面的每一项都去使用方法里面的函数,最后返回新数组
+// 因为map方法有索引,所以实际上就是 
+parseInt(1,0);//1,因为0表示十进制
+parseInt(2,1);//1进制<2，所以错啦!
+parseInt(3,2);// 2进制,但是3不在0——2范围内(3应该改为11),所以不符合2进制要求
+parseInt(2,3);//符合,因为三进制是0-3,而2在范围内
+parseInt(5,4);//4进制不包括5,所以NaN
+```
+
+
+
+----
+
+## 冒泡
+
+不能被冒泡的9个事件：
+
+① load和unload
+
+ ② mouseenter和mouseleave 
+
+③ blur和focus 
+
+④ error 
+
+⑤ resize和abort
+
+----
+
+## with
+
+```js
+function change(obj) {
+  with(obj) {
+    color = 'red'
+  }
+}
+var box = {
+  size: '15*15'
+}
+change(box);
+console.log(color);  // red
+```
+
+需要明确with会创建一个新的作用域，由于box本身没有color这个变量，所以这个操作相当于往全局定义了一个值为red的全局变量，而不是在box对象中定义，因此可以全局访问color。
+
+ with 代码块内部，每个变量首先会指向 obj 对象属性，所以color = 'red' 可以等效于obj.color = red
+
+但是obj身上并没有color这个属性，于是去change函数的作用域寻找color但也没有找到，
+
+最后在全局作用域没有color的情况下，于是直接设置 全局.color = 'red'
+
+这就是数据泄漏的过程，经过一通操作，color泄露到全局
+
+
+
+----
+
+## javascript中查找元素的方法
+
+```
+getElementById
+
+getElementsByTagName
+
+getElementsByClassName
+
+getElementsByName
+```
+
+
+
+-----
+
+## class get
+
+```js
+class Phone{
+  constructor(price){
+    this.price = price;
+  }
+  get price(){
+    return 999;
+  }
+}
+var p = new Phone(888);
+console.log(p.price);  // TypeError: Cannot set property price of #<Phone> which has only a getter
+
+```
+
+当类中一个属性只有get()方法而无set()方法时，该属性是无法进行赋值的，连构造方法中的初始化都不行，因此，当对象的price属性在构造方法中进行初始化，会抛出异常。
+
+
+
+-----
+
+## delete
+
+```js
+var a = 1;
+b = 2;
+eval('var c = 3');
+delete a;
+delete b;
+delete c;
+```
+
+在eval中使用var声明的全局变量可以被delete删除，所以变量c能删除成功，
+
+除此之外，在其他情况下，使用var声明的全局变量或者局部变量一般是不能被delete删除的，所以变量a无法被删除，仍然可以访问到，
+
+而未使用var声明的全局变量可以使用delete进行删除，所以无法访问到b。
+
+综上，只有变量a未被成功删除，可以访问得到
+
+
+
+-----
 
 
 
